# omscs-radar

./: .gitignore
scraper/: pyproject.toml
scraper/src/scraper/: fetch_omscentral.py
